[gd_scene load_steps=15 format=2]

[ext_resource path="res://Area.gd" type="Script" id=1]
[ext_resource path="res://Jellyfish Sprite Sheet.png" type="Texture" id=2]
[ext_resource path="res://jelly_idle.tres" type="AudioStream" id=3]
[ext_resource path="res://explode.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprite3D.gd" type="Script" id=5]
[ext_resource path="res://jelly_boss.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=3]
margin = 1.396
extents = Vector3( 0.298735, 0.400086, 0.374263 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 21 ]
}

[sub_resource type="Animation" id=8]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 24, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_squish"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 )
}

[sub_resource type="Animation" id=10]
resource_name = "zap"
length = 0.3
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.084, 0.168, 0.252 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 11 ]
}

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.135084, 0.195823, 0.21308 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.714736, 0.803171, 0.508678 )

[sub_resource type="CylinderShape" id=9]
radius = 0.482561
height = 2.21302

[node name="jelly" type="KinematicBody"]
collision_layer = 0
collision_mask = 0
axis_lock_motion_y = true
move_lock_y = true
collision/safe_margin = 1.2
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.0285, 0, 0 )
shape = SubResource( 3 )
disabled = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
generate_lightmap = false
billboard = 1
texture = ExtResource( 2 )
hframes = 7
vframes = 5
frame = 21
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite3D"]
anims/RESET = SubResource( 6 )
anims/die = SubResource( 8 )
anims/idle = SubResource( 7 )
anims/zap = SubResource( 10 )

[node name="Area" type="Area" parent="." groups=["enemy"]]
transform = Transform( 1.2, 0, 0, 0, -5.24537e-08, -1.2, 0, 1.2, -5.24537e-08, 0, 0, 0 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="Area"]
transform = Transform( 3, 0, 0, 0, -1.31134e-07, 3, 0, -3, -1.31134e-07, 0, 0, 0 )
shape = SubResource( 4 )

[node name="attack_box" type="Area" parent="." groups=["enemy"]]
transform = Transform( 1.2, 0, 0, 0, -5.24537e-08, -1.2, 0, 1.2, -5.24537e-08, 0, 0, 0 )
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="attack_box"]
shape = SubResource( 5 )

[node name="enemy_detection" type="Area" parent="."]
transform = Transform( 1.2, 0, 0, 0, -5.24537e-08, -0.247, 0, 1.2, -1.07967e-08, 0, 0, 0 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="enemy_detection"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 9 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 10.0
autoplay = true
max_distance = 20.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 24.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.53
autostart = true

[connection signal="animation_finished" from="Sprite3D/AnimationPlayer" to="Sprite3D" method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_entered" from="Area" to="Sprite3D" method="_on_Area_area_entered"]
[connection signal="area_entered" from="attack_box" to="." method="_on_attack_box_area_entered"]
[connection signal="area_entered" from="attack_box" to="Sprite3D" method="_on_attack_box_area_entered"]
[connection signal="area_entered" from="enemy_detection" to="." method="_on_enemy_detection_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
